@@ -44,7 +44,7 @@ public class BaseTest extends BaseDistributedTest {
 		getTest().setVerbose(9);
 	}
 
-	protected void setParallel(boolean parallel) {
+	protected void setParallel(String parallel) {
 		getTest().setParallel(parallel);
 	}
 
